# RPCFROMEXAMPLE

./: CMakeLists.txt  README.md  Test copy.C  Test_10kV.C  Test_10kV_500Step.C  Weight.C  Weight_V2.C
Meeting/: Nebem1Gap_ViewDrift_Vneg_5kV.C
Meeting2/: CMakeLists.txt  Nebem1Gap_ViewDrift_Vneg_5kV.C
Meeting3/: Nebem1Gap_ViewDrift_Vneg_5kV.C  README.md
MergedGasFile/: CMakeLists.txt  MergedGasFile.C
MergedGasFile_Meeting/: MergedGasFile.C
Nebem1Gap_ViewDrift_Vneg_10kV/: CMakeLists.txt  README.md
Nebem1Gap_ViewDrift_Vneg_15kV/: CMakeLists.txt  Nebem1Gap_ViewDrift_Vneg_15kV.C  README.md
Nebem1Gap_ViewDrift_Vneg_5kV/: Nebem1Gap_ViewDrift_Vneg_5kV.C
Nebem1Gap_ViewDrift_Vneg_6kV/: CMakeLists.txt  Nebem1Gap_ViewDrift_Vneg_6kV.C
Nebem_FieldPlot_Test/: CMakeLists.txt  Nebem_FieldPlot.C  Nebem_FieldPlot.root  ROOTPlot_Nebem_FieldPlot.root
O_1Gap/: CMakeLists.txt  O_1Gap.C  README.md
O_NoGasTable/: CMakeLists.txt  O_NoGasTable.C  README.md
O_ViewDrift/: CMakeLists.txt  O_ViewDrift.C  README.md
O_ViewDrift_Vneg_1Gap/: CMakeLists.txt  O_ViewDrift_Vneg_1Gap.C  README.md
Original/: CMakeLists.txt  Original.C  README.md
TestingGit/: Nebem_FieldPlot.C
Workspace/AvalMC_Nebem/: AvalMC_Nebem.C  plot_signals.cpp
Workspace/AvalMicroGPU_Nebem/: AvalMicroGPU_Nebem.C  CMakeLists.txt
Workspace/Debug_MediumIssue/: CMakeLists.txt  Debug_6kV.C  MeetingMinute.md  Nebem1Gap_ViewDrift_Vneg_6kV.C  README.md  Signal.csv
Workspace/Debug_Medium_PlotField/: CMakeLists.txt  Nebem_FieldPlot.C  Nebem_FieldPlot.root  ROOTPlot_Nebem_FieldPlot.root  Read_NebemPlot.cpp
Workspace/Debug_Medium_PlotField/Out_build/: ROOTPlot_Nebem_FieldPlot.root
Workspace/Debug_Medium_PlotField/build2/: CMakeCache.txt  Makefile  Nebem_FieldPlot  Nebem_FieldPlot.root  cmake_install.cmake
Workspace/Debug_Medium_PlotField/build2/neBEMOut/Model1/Primitives/: Primitive10.out  Primitive13.out  Primitive14.out  Primitive15.out  Primitive17.out  Primitive2.out  Primitive21.out  Primitive23.out  Primitive24.out  (+15 more)
Workspace/Shub_Code/: RPC_field.C
(+35 files in other folders)
